--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- script
     ================================================== -->
+    <script src="js/modernizr.js"></script>
     <script src="js/main.js"></script>
 
     <!-- favicons
