landing page + font + começando about

--- a/index.html
+++ b/index.html
@@ -2,16 +2,10 @@
 <html class="no-js" lang="en">
 <head>
 
-    <!--- basic page needs
-    ================================================== -->
     <meta charset="utf-8">
     <title>Bruna Silva</title>
     <meta name="description" content="">
-    <meta name="author" content="">
-
-    <!-- mobile specific metas
-    ================================================== -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device width, initial-scale=1">
 
     <!-- CSS
     ================================================== -->
@@ -20,10 +14,10 @@
 
     <!-- script
     ================================================== -->
-    <script src="js/modernizr.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/modernizr.js"></script>
 
-    <!-- favicons
+    <!-- favicon
     ================================================== -->
     <link href="favicon.ico" rel="icon">
 
@@ -35,9 +29,9 @@
         <div id="loader"></div>
     </div>
 
-    <!-- site header
+    <!-- header
     ================================================== -->
-    <header class="s-header">
+    <header class="header">
 
         <div class="header-logo">
             <a href="index.html">BS.</a>
@@ -45,11 +39,11 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-main-nav">
-                <li class="current"><a class="smoothscroll" href="#intro" title="intro">Intro</a></li>
-                <li><a class="smoothscroll" href="#about" title="about">Sobre</a></li>
-                <li><a class="smoothscroll" href="#services" title="services">Serviços</a></li>
-                <li><a class="smoothscroll" href="#works" title="works">Portfolio</a></li>
-                <li><a class="smoothscroll" href="#contact" title="contact us">Contato</a></li>	
+                <li class="current"><a class="smoothscroll" href="#home" title="Menu">Menu</a></li>
+                <li><a class="smoothscroll" href="#about" title="Menu">Sobre</a></li>
+                <li><a class="smoothscroll" href="#services" title="Menu">Serviços</a></li>
+                <li><a class="smoothscroll" href="#portfolio" title="Menu">Portfolio</a></li>
+                <li><a class="smoothscroll" href="#contact" title="Menu">Contato</a></li>
             </ul>
 
             <ul class="header-social">
@@ -61,18 +55,19 @@
 
         <a class="header-menu-toggle" href="#"><span>Menu</span></a>
 
-    </header> <!-- end s-header -->
+    </header>
+    <!-- end header -->
 
 
-    <!-- intro
+    <!-- home
     ================================================== -->
-    <section id="intro" class="s-intro target-section">
+    <section id="home" class="home target-section">
 
-        <div class="intro-pic"></div>
+        <div class="home-pic"></div>
 
-        <div class="row intro-content">
+        <div class="row home-content">
 
-            <div class="column large-9 mob-full intro-text">
+            <div class="column large-9 mob-full home-text">
                 
                 <h1>
                     Bruna Silva
@@ -81,23 +76,31 @@
 
             </div>
 
-            <div class="intro-scroll">
-                <a href="#about" class="intro-scroll-link smoothscroll">
+            <div class="home-scroll">
+                <a href="#about" class="home-scroll-link smoothscroll">
                     Rolar para baixo
                 </a>
             </div>
 
-            
+        </div> 
 
-        </div> <!-- end row -->
+    </section>
+    <!-- end home -->
 
-    </section> <!-- end intro -->
+
+    <!-- about
+    ================================================== -->
+    <section id="about" class="about target-section">
+
+    </section>
+    <!-- end about -->
 
 
-    <!-- Java Script
+    <!-- js
     ================================================== -->
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 
 </body>
+</html>
